force-app/main/default/objects/AppliedPromotion__c/AppliedPromotion__c.object-meta.xml
<CustomObject>
    <description>Applied promotions on secondary orders</description>
    <label>Applied Promotion</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Applied Promotion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>