force-app/main/default/objects/AppliedPromotion__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Applied Promotions</relationshipLabel>
    <relationshipName>Applied_Promotions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>