force-app/main/default/objects/AppliedPromotion__c/fields/ProofRef__c.field-meta.xml
<CustomField>
    <fullName>ProofRef__c</fullName>
    <label>Proof Ref</label>
    <length>80</length>
    <type>Text</type>
</CustomField>