force-app/main/default/objects/AppliedPromotion__c/fields/SecondaryOrder__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOrder__c</fullName>
    <label>Secondary Order</label>
    <referenceTo>SecondaryOrder__c</referenceTo>
    <relationshipLabel>Applied Promotions</relationshipLabel>
    <relationshipName>Applied_Promotions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>