force-app/main/default/objects/AppliedPromotion__c/fields/SecondaryOrderLine__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOrderLine__c</fullName>
    <label>SecondaryOrderLine</label>
    <referenceTo>SecondaryOrderLine__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>